[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/walls.png" type="Texture" id=1]
[ext_resource path="res://scripts/walls.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.70071, 212.206 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 281.201, 5.7421 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.51758, 211.921 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 280.918, 5.48248 )

[sub_resource type="Animation" id=5]
resource_name = "growField"
tracks/0/type = "value"
tracks/0/path = NodePath("enclosure:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.5 ),
"transitions": PoolRealArray( 1.93187, 1.93187 ),
"update": 0,
"values": [ Vector2( 509.799, 259.282 ), Vector2( 400, 259.282 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("enclosure:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 6.06288, 0.392292 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ), Vector2( 0.7, 0.7 ), Vector2( 0.9, 0.7 ) ]
}

[node name="walls" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="enclosure" type="Sprite" parent="."]
position = Vector2( 509.278, 259.282 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="wall_left" type="StaticBody2D" parent="."]
position = Vector2( 233.23, 257.621 )
collision_layer = 2

[node name="collision" type="CollisionShape2D" parent="wall_left"]
shape = SubResource( 1 )

[node name="wall_up" type="StaticBody2D" parent="."]
position = Vector2( 510.79, 51.062 )
collision_layer = 2

[node name="collision" type="CollisionShape2D" parent="wall_up"]
shape = SubResource( 2 )

[node name="wall_right" type="StaticBody2D" parent="."]
position = Vector2( 786.967, 259.311 )
collision_layer = 2

[node name="collision" type="CollisionShape2D" parent="wall_right"]
shape = SubResource( 3 )

[node name="wall_down" type="StaticBody2D" parent="."]
position = Vector2( 510.28, 467.568 )
collision_layer = 2

[node name="collision" type="CollisionShape2D" parent="wall_down"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/growField = SubResource( 5 )
